# psqls

./: .gitmodules  Cargo.toml
psqls/: Cargo.toml
psqls-ide/: Cargo.toml
psqls-ide/src/: highlight.rs  lib.rs  tests.rs
psqls-ide/src/highlight/: tests.rs
psqls-syn/: Cargo.toml  build.rs
psqls-syn/src/: convert.rs  db.rs  gen.rs  generated.rs  lib.rs  lower.rs  node.rs  nodes.rs  tests.rs  ts_to_rowan.rs  validation.rs  visit.rs
psqls/src/: convert.rs  lib.rs  lsp.rs  psqls.rs  tests.rs  tokens.rs
psqls/src/tokens/: tests.rs
tree-sitter-sql/: .gitattributes  grammar.js
tree-sitter-sql/src/: grammar.json  node-types.json  parser.c
vscode-psqls/: CHANGELOG.md  README.md  package.json
vscode-psqls/src/: extension.ts
