[package]
name = "psqls-syn"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.10"
rowan = "0.15.5"
salsa = "0.17.0-pre.2"
tree-sitter = "0.20"

[dev-dependencies]
anyhow = "1"
convert_case = "0.5.0"
expect-test = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smallbitvec = "2.5.1"

[build-dependencies]
cc = "1"
